--- a/src/UserItem.css
+++ b/src/UserItem.css
@@ -20,8 +20,8 @@
 }
 
 .UserItem-picture {
-    height: 50px;
-    width: 50px;
+  height: 50px;
+  width: 50px;
 }
 
 .UserItem-names {
@@ -42,6 +42,12 @@
   margin: 3px;
 }
 
+.UserItem-role {
+  text-align: center;
+  font-size: small;
+  margin: 3px;
+}
+
 .UserItem-gender {
   text-align: center;
   font-size: small;
@@ -53,4 +59,13 @@
   font-size: small;
   font-weight: 100;
   row-gap: 0px;
+}
+
+.UserItem-btn-container {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.UserItem-button {
+  margin: 5px;
 }
