--- a/src/UserInput.css
+++ b/src/UserInput.css
@@ -15,3 +15,12 @@
 .UserInput-submit-btn {
     margin-bottom: 5%;
 }
+
+@media (max-width: 800px) {
+    .UserInput-container {
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+  
