--- a/src/UserItem.css
+++ b/src/UserItem.css
@@ -8,7 +8,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 20%;
+  width: 25%;
   height: 100%;
   border: 1px solid black;
   margin: 30px;
@@ -68,4 +68,10 @@
 
 .UserItem-button {
   margin: 5px;
+}
+
+@media (max-width: 800px) {
+  .UserItem {
+    width: 40%;
+  }
 }
