--- a/src/UserLogin.css
+++ b/src/UserLogin.css
@@ -1,7 +1,5 @@
-.UserLogin {
+.UserLogin-form {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-evenly;
 }
-
-
