--- a/src/UserInput.css
+++ b/src/UserInput.css
@@ -1,26 +1,3 @@
-.UserInput-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+label {
+    color: rgb(40, 41, 67);
 }
-
-.UserInput-left-side, .UserInput-right-side {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    margin: 5%;
-    width: 100%;
-}
-
-.UserInput-submit-btn {
-    margin-bottom: 5%;
-}
-
-@media (max-width: 800px) {
-    .UserInput-container {
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-    }
-  }
-  
